--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -1,10 +1,16 @@
+@import url('https://fonts.googleapis.com/css2?family=Tiny5&display=swap');
+
 :root {
   /* INFO: Solid Colors */
   --black: #000000;
-  --white: #FFFFFF;
-  --gray: #36393e;
+  --white: #FBF8EF;
+  --light-blue: #C9E6F0;
+  --blue: #78B3CE;
+    --gray: #36393e;
+    --orange: #F96E2A;
   /* INFO: font-family */
-  --font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+  --font-family: 'Tiny5', sans-serif  ;
+  --font-size: 16px;
 }
 
 /* INFO: Reset To Defaults */
@@ -19,10 +25,10 @@
 
 body {
   font-family: var(--font-family);
+  width: 100%;
   min-height: 100vh;
   display: flex;
   justify-content: center;
-  align-items: center;
-  background-color: var(--gray);
-  color: var(--white);
+  font-size: var(--font-size);
+  background-color: var(--white);
 }
