--- a/src/styles/Header.css
+++ b/src/styles/Header.css
@@ -6,6 +6,7 @@ header {
     justify-content: center;
     padding: 1rem;
     border-bottom: .5px solid var(--black);
+    margin-bottom: 2rem;
 }
 
 header nav {
